shadow and grades list almost ready :3

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html, body{
     background-color: #f1f6f6;
     font-size: 4px;
     font-family: sans-serif;
-
 }
 
 header{
@@ -91,45 +90,17 @@ li a {
     line-height: 4rem;
     padding-right: 1rem;
 }
-.grados{
-    background-color: red;
+
+.Grados{
+    display: block;
+    background-color: white;
+    box-shadow: 5px 10px #888888;
+    height: 350px;
+    margin: 40px;
+    padding: 10px;
+    float: left;
 }
 
-.gradoesp{
-    font-family: sans-serif;
-    font-size: 4rem;
-    padding-left: 5rem;
-
-}
-.sidebar {
-    background-color: aqua;
-    top: 50%;
-    bottom: 50%;
-    position: center;
-    z-index: 1;
-
-    margin-bottom: 10px;
-    margin-top: 10px;
-
-}
-
-/* Style sidebar links */
-.sidebar a {
-    padding: 2px 2px 2px 2px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
+.Grados a{
     display: block;
 }
-
-/* Style links on mouse-over */
-.sidebar a:hover {
-    color: red;
-}
-
-/* Style the main content */
-.main {
-    margin-left: 160px; /* Same as the width of the sidenav */
-    padding: 0px 10px;
-}
-
