MORE shadow and grades list almost ready :3

--- a/styles.css
+++ b/styles.css
@@ -103,4 +103,9 @@ li a {
 
 .Grados a{
     display: block;
+    font-size: 15px;
+    text-align: left;
+    line-height: 35px;
+    margin-top: 15px;
+
 }
