OMG THERE IS PROGRESS

--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,44 @@ li a {
     margin-top: 15px;
 }
 
+.boton__case{
+    float: right;
+    margin-right: 110px;
+    margin-top: -390px;
+
+}
+.boton_personalizado{
+    margin-right: 25px;
+    text-decoration: none;
+    padding: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: helvetica;
+    font-weight: 300;
+    font-size: 25px;
+    font-style: italic;
+    color: #006505;
+    background-color: #82b085;
+    border-radius: 15px;
+    border: 3px double #006505;
+}
+.boton_personalizado:hover{
+    color: #1883ba;
+    background-color: #ffffff;
+}
+
+.boton_2{
+    text-decoration: none;
+    padding: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: helvetica;
+    font-weight: 300;
+    font-size: 25px;
+    font-style: italic;
+    color: #006505;
+    background-color: #82b085;
+    border-radius: 15px;
+    border: 3px double #006505;
+
+}
