--- a/styles.css
+++ b/styles.css
@@ -125,17 +125,17 @@ li a {
 .boton_personalizado{
     margin-right: 25px;
     text-decoration: none;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
     font-family: helvetica;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 15px;
     font-style: italic;
-    color: #006505;
-    background-color: #82b085;
+    color: white;
+    background-color: deepskyblue;
     border-radius: 15px;
-    border: 3px double #006505;
+    border: 3px double dodgerblue;
 }
 .boton_personalizado:hover{
     color: #1883ba;
@@ -144,16 +144,20 @@ li a {
 
 .boton_2{
     text-decoration: none;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
     font-family: helvetica;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 15px;
     font-style: italic;
-    color: #006505;
-    background-color: #82b085;
+    color: white;
+    background-color: forestgreen;
     border-radius: 15px;
     border: 3px double #006505;
 
+}
+.boton_2:hover{
+    color: #1883ba;
+    background-color: #ffffff;
 }
