--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,13 @@ li a {
 .Colegio__1{
     float: left;
     margin-left: 8rem;
+    text-decoration: none;
 }
 
 .Libros__Electronicos{
     float: left;
     margin-left: 8rem;
+    text-decoration: none;
 }
 
 
@@ -39,18 +41,20 @@ li a {
     font-weight: 600;
     line-height: 6rem;
     padding-top: 8rem;
+    text-decoration: none;
 }
 
 .Contras__pag{
     float: right;
     margin-right: 12rem;
     margin-top: 4rem;
-    border-right: #E8E3E2;
+    border-right: #E8E3E3;
     border-right-style: inset;
     border-right-width: thin;
-    border-left: #E8E3E2;
+    border-left: #E8E3E3;
     border-left-style: outset;
     border-left-width: thin;
+    text-decoration: none;
 }
 
 .LB{
@@ -71,15 +75,16 @@ li a {
     margin-top: 10rem ;
     padding-left: 2rem;
     padding-right: 8rem;
-
     position: relative;
     bottom: 4rem;
+    text-decoration: none;
 }
 
 .Nommbre__John{
     float: right;
     margin-right: 8rem;
     margin-top: 8rem;
+    text-decoration: none;
 }
 
 .John{
@@ -89,6 +94,7 @@ li a {
     font-weight: 700;
     line-height: 4rem;
     padding-right: 1rem;
+    text-decoration: none;
 }
 
 /* Nav Bar*/
